--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "bcryptjs": "^2.4.3",
     "next": "^14.2.2",
     "next-auth": "^5.0.0-beta.16",
