--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mapbox/node-pre-gyp": "^1.0.11",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "bcrypt": "^5.1.1",
